--- a/care/frontend/templates/app.html
+++ b/care/frontend/templates/app.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <title>Congregate Care</title>
 </head>
 <body>
-    <p>
-        You are authenticated!
-    </p>
-    <div id="app">React app not found.</div>
+    <div id="app"></div>
     <script src="{% static "app.bundle.js" %}"></script>
 </body>
 </html>
